test/invalid-semantics/57163_no_wild_card_in_expressions/no_wild_card_in_expressions.mag
-- Author: 57163, Guilherme Dias

const _ : Int = 1242 * _
